<resources>
    <string name="app_name">AMADEHA</string>
    <string name="crash_toast_text">Ha ocurrido un error en la Aplicación…</string>
    <string name="equation_game">Ecuaciones</string>
    <string name="function_game">Funciones</string>
    <string name="statistic_game">Estadística</string>
    <string name="sets_game">Conjuntos</string>
    <string name="matrix_game">Matrices</string>
    <string name="jugar">Jugar</string>
    <string name="highscores">HighScores</string>
    <string name="player">Usuario</string>
    <string name="date">Fecha</string>
    <string name="score">Puntos</string>
    <string name="score_date">Fecha</string>
    <string name="score_user">Highscore</string>
    <string name="score_final">Puntos: %s</string>
    <string name="score_undefined">Aún no existen puntajes en este nivel</string>
    <string name="equation_unblock">Para desploquear este nivel consigue 30+ puntos en Funciones</string>
    <string name="function_unblock">Para desploquear este nivel consigue 30+ puntos en Conjuntos</string>
    <string name="statistic_unblock">Para desploquear este nivel consigue 40+ puntos en Matrices</string>
    <string name="sets_unblock">Desbloqueado por default</string>
    <string name="matrix_unblock">Para desploquear este nivel consigue 40+ puntos en Ecuaciones</string>
    <string name="pause_button">Pausa</string>
    <string name="reset_button">Reiniciar</string>
    <string name="exit_button">Salir</string>
    <string name="end_of_game">Fin del juego</string>
    <string name="retry">Reintentar</string>
    <string name="continue_game">Continuar</string>
    <string name="play">Jugar</string>
    <string name="show_instructions">Instrucciones</string>
    <string name="do_exit_game">¿Desea salir del juego?</string>
    <string name="time_">Tiempo:</string>
    <string name="points_">Puntos:</string>
    <string name="progress_">Progreso:</string>
    <string name="player_">Jugador:</string>
    <string name="skip">SALTAR</string>
    <string name="close_">Cerrar</string>
    <string name="instruction">"Intrucciones"</string>
    <string name="equation_description">Objetivo: Conocer y entender el sistema de ecuaciones lineales y sus conceptos básicos.\n\nDeberás arrastrar y soltar la solución sobre las incógnitas de las equaciones indicadas.\n\nA continuación una serie de imágenes para ayudarte a comprender el juego:</string>
    <string name="equation_0">Cuentas con 5 posibles respuestas para las incógnitas.\n\nDebes elegir cuidadosamente, de lo contrario perderás puntos.</string>
    <string name="equation_1">Dependiendo de la ecuación, deberás arrastrar ambas soluciones o la solución a la incógnita donde corresponda.</string>
    <string name="equation_2">Suelta la solución sobre la incógnita.\nAsegúrate de estar correctamente posicionado sobre ella.</string>
    <string name="equation_3">No permitas que se acabe el tiempo y responde correctamente.\n\n¡Mucha suerte!</string>
    <string name="function_description">Objetivo: Diferenciar las relaciones y funciones para poder representar la asociación y el comportamiento de elementos.\n\nDeberás completar un memorama, descubriendo todas las cartas en el tiempo indicado.\n\nA continuación una serie de imágenes para ayudarte a comprender el juego:</string>
    <string name="function_0">Las cartas son completamente al azar, y cada una tiene su par.\n\nHay un total de 6 pares y tienes 2 minutos por cada uno.</string>
    <string name="function_1">Para descubrir una carta, gentilmente toca la parte superior de esta.\n\nNo puedes deshacer tus movimientos. ¡Ten cuidado!</string>
    <string name="function_2">Para descubrir una segunda carta, toca cualquiera excepto la carta activa.\n\nCada par incorrecto te cuesta puntos. ¡Ouch!</string>
    <string name="function_3">No permitas que se acabe el tiempo y responde correctamente.\n\nMucha suerte!</string>
    <string name="matrix_description">Objetivo: Conocer los conceptos básicos de las matrices y sus variadas operaciones.\n\nDeberás ordenar elementos de una matriz para hacerla coincidir con la operación.\n\nA continuación una serie de imágenes para ayudarte a comprender el juego:</string>
    <string name="matrix_0">Realiza la operación entre Matrices, en este juego tienes que ser rápido.\n\nArrastra los elementos con tus dedos.</string>
    <string name="matrix_1">Ordena los elementos para que coincidan con tu respuesta, por cada movimiento erróneo perderás puntos. ¡Ten cuidado!</string>
    <string name="matrix_2">No permitas que se acabe el tiempo y responde correctamente.\n\nMucha suerte!</string>
    <string name="sets_description">Objetivo: Clasificar los diferentes tipos de conjuntos y operaciones.\n\nDeberás arrastrar y soltar elementos en este juego, así que prepara tus pulgares.\n\nA continuación una serie de imágenes para ayudarte a comprender el juego:</string>
    <string name="sets_0">Tienes un conjunto y una serie de imágenes, arrastra la imágen a la incógnita marcada.\n\nSi no hay respuesta arrastra NONE.</string>
    <string name="sets_1">Suelta la imágen sobre la incógnita marcada.\n\nAsegúrate que sea la respuesta correcta, ya que perderás puntos de lo contrario.</string>
    <string name="sets_2">No permitas que se acabe el tiempo y responde correctamente.\n\nMucha suerte!</string>
    <string name="statistic_description">Objetivo: Interpretar la información para establecer el comportamiento de los datos que se le presenten en su día a día.\n\nDeberás seleccionar una respuesta de una lista, así que prepara tu conocimiento.\n\nA continuación una serie de imágenes para ayudarte a comprender el juego:</string>
    <string name="statistic_0">Se te presenta una pregunta en la parte superior y varias respuestas en la parte inferior.\n\nSelecciona la respuesta correcta</string>
    <string name="statistic_1">Al ser opción múltiple, existe la posibilidad de que ningúna sea correcta, como lo es en este ejemplo.\n¡Mucho cuidado!</string>
    <string name="statistic_2">No permitas que se acabe el tiempo y responde correctamente.\n\n¡Mucha suerte!</string>
    <string name="new_user">Nuevo usuario</string>
    <string name="add_user">Introduce nombre de usuario:</string>
    <string name="wrong_user">Usuario incorrecto</string>
    <string name="play_guest">Jugar como invitado</string>
    <string name="menu_settings">Opciones</string>
    <string name="delete_user">Eliminar usuario</string>
    <string name="delete_user_question">¿Desea eliminar este usuario?</string>
    <string name="leaderboard">Tabla de clasificación</string>
    <string name="delete_highscores">Eliminar HighScores</string>
    <string name="delete_highscores_question">¿Desea eliminar los HighScores?</string>
    <string name="usuario_">Usuario:</string>
    <string name="puntaje_">Puntaje:</string>
    <string name="fecha_">Fecha:</string>
    <string name="mejor_puntaje">Mejor puntaje:</string>
    <string name="settings">Configuración</string>
    <string name="volume_effects">Volumen de Efectos</string>
    <string name="volume_musics">Volumen de Música</string>
    <string name="volume">Volumen:</string>
    <string name="available_points">Selección de personaje, puntos: </string>
    <string name="needed_points">Debes completar el juego %s veces para desbloquear este personaje</string>
    <string name="chronometer_placeholder" translatable="false">%02d:%02d</string>
    <string name="chronometer" translatable="false">00:00</string>
    <string name="default_points" translatable="false">00</string>
    <string name="question_mark" translatable="false">\?</string>
    <string name="bracket_right" translatable="false">]</string>
    <string name="bracket_left" translatable="false">[</string>
    <string name="equals" translatable="false">=</string>
    <string name="_false">Falso</string>
    <string name="_true">Verdadero</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="none_of_the_above">Ninguna de las anteriores</string>
    <string name="equation_solve">Resuelve la: %s</string>
    <string name="equation_first_grade">"Ecuación de primer grado"</string>
    <string name="equation_second_grade">"Ecuación de segundo grado"</string>
    <string name="equation_bi_unknown">"Ecuación de dos incógnitas"</string>
    <string name="start">INICIO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="omit">Omitir</string>
    <string name="next">Siguiente</string>
    <string name="back">Regresar</string>
    <string name="stuty">Estudiar</string>
    <string name="titulo1">Teoría de conjuntos</string>
    <string name="titulo2">Relaciones y funciones</string>
    <string name="titulo3">Sistema de ecuaciones lineales</string>
    <string name="titulo4">Matrices</string>
    <string name="titulo5">Estadística descriptiva</string>
    <string name="objetivoUnidadUnoTeoria">Objetivo: Clasificar los diferentes tipos de conjuntos y operaciones.</string>
    <string name="objetivoUnidadDosTeoria">Objetivo: Diferenciar las relaciones y funciones para poder representar la asociación y el comportamiento de elementos.</string>
    <string name="objetivoUnidadTresTeoria">Objetivo: Conocer y entender el sistema de ecuaciones lineales y sus conceptos básicos.</string>
    <string name="objetivoUnidadCuatroTeoria">Objetivo: Conocer los conceptos básicos de las matrices y sus variadas operaciones.</string>
    <string name="objetivoUnidadCincoTeoria">Objetivo: Interpretar la información para establecer el comportamiento de los datos que se le presenten en su día a día.</string>
    <string name="objetivoUnidadUnoVídeos">Objetivo: Entender los diferentes tipos de conjunto y operaciones.</string>
    <string name="objetivoUnidadDosVídeos">Objetivo: Detectar las relaciones y funciones para poder representar la asociación y el comportamiento de elementos.</string>
    <string name="objetivoUnidadTresVídeos">Objetivo: Apreciar y entender el sistema de ecuaciones lineales y sus conceptos básicos.</string>
    <string name="videosFragment">Entonces... ¡Te encuentras en el lugar indicado!, aquí encontrarás diferentes vídeos explicativos referente a cada unidad de la materia que te ayudarán a estudiar de una manera más divertida.\n</string>
    <string name="titulo4Matrices">Localización de las componentes de una matriz:\n</string>
    <string name="titulo5Matrices">\nIgualdad de matrices\n</string>
    <string name="titulo2Estadistica">Descripción de datos con medidas numéricas\n</string>
    <string name="subtitulo1Matrices">Ejemplo:\n</string>
    <string name="layout5Matrices">Encuentre los componentes (1,2), (3,1) y (2,2) de\n</string>
    <string name="layout6Matrices">\nSolución: La componente (1, 2) es el número que se encuentra en el primer renglón y la segunda columna, que se han sombreado: la componente (1, 2) es 6:\n</string>
    <string name="layout8Matrices">(El elemento aij de una matriz se localiza en la fila i y en la comuna j.)\n</string>
    <string name="layout9Matrices">Dos matrices A= (aij) y B= (bij) son iguales si (1) son del mismo tamaño y (2) las componentes correspondientes son iguales.\n</string>
    <string name="layout4Estadistica">Definiciones\n\nLa media aritmética o promedio de un conjunto de n mediciones es igual a la suma de las mediciones dividida entre n.\n</string>
    <string name="layout5Estadistica">\nLa mediana m de un conjunto de n mediciones es el valor de x que cae en la posición cuando las mediciones son ordenadas de menor a mayor.\n</string>
    <string name="ver">Ver</string>
    <string name="fragmentVideosInicio2">¿Eres de las personas que detestan leer?</string>
    <string name="fragmentVideosInico1">¿Qué hay?</string>
</resources>