<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/instruction_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/instruction_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_button"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/instruction_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_instructions"
                android:layout_margin="10dp"/>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>