<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/points_"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="normal|bold"/>

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/default_points"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/progress_"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="normal|bold"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:max="10"
            android:progress="0"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:background="@color/transparent"
            android:gravity="center">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:src="@android:drawable/ic_lock_idle_alarm"/>

            <TextView
                android:id="@+id/countdown"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/chronometer"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/transparent"
            android:gravity="center"
            android:onClick="skip"
            android:padding="5dp"
            android:text="@string/skip"/>

    </LinearLayout>

    <View
        style="@style/Divider"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/equation_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/equation_solve"
        android:textColor="@color/fontBlack"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/_equation_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#40FFFFFF"
        android:gravity="center"
        android:orientation="horizontal">
    </LinearLayout>

    <View
        style="@style/Divider"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        tools:ignore="ButtonStyle">

        <Button
            android:id="@+id/answer_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/answer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/answer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/answer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/answer_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:textColor="@android:color/black"/>
    </TableRow>
</LinearLayout>